Mise à jour de SOLUTIONS.md : ajout de descriptions pour les vulnérabilités et clarification des exploits. Commentaire sur les volumes dans docker-compose.yml.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - "80:80"
     depends_on:
       - db
-    volumes:
-      - .:/var/www/html
+    #volumes:
+      #- .:/var/www/html
 
   db:
     image: postgres:13
